# 3DGameEngine

./: CMakeLists.txt  README.md  run.sh
Assets/Shaders/: basic.fr  basic.vs
Include/glad/: glad.h
Src/: compile_commands.json  glad.c  main.c
Src/.cache/clangd/index/: Engine.c.C2478205CEF5400C.idx  Engine.h.1E2085EE77678D76.idx  Entity.c.796BDA6F79BBC82C.idx  Entity.h.D5A57E89D7C655D2.idx  Material.c.EBB7B452059188AD.idx  Material.h.65D8DD2F17DFC597.idx  Mesh.c.EEA03FE2F168E343.idx  Mesh.h.D97696B81BE72B0C.idx  Model.c.094E1295332F2683.idx  Model.h.A53EAC20566F1225.idx  Renderer.c.FC0110D5293A836C.idx  Scene.c.83528AB60D73B831.idx  Scene.h.B448603E1E7FF7F9.idx  Shader.c.592531086959F1A1.idx  Shader.h.3D48114E1D040C0E.idx  Texture.c.B97BF58161123538.idx  Texture.h.BE58C5E267E48EB6.idx  Utility.c.198F376C67EDF6C4.idx  Utility.h.3F88A6ADD545039D.idx  Window.c.96935203700B5742.idx  Window.h.69B303C6DDB2974F.idx  glad.c.2B27570583C73CC4.idx  main.c.6BD53449BA1780BE.idx  stb_image.c.E7BAFD99C51EBE2F.idx  stb_image.h.B91E8A0AD2C78D83.idx
Src/Core/: Engine.c  Engine.h  Window.c  Window.h
Src/Render/: Entity.c  Entity.h  Material.c  Material.h  Mesh.c  Mesh.h  Model.c  Model.h  Scene.h  Shader.c  Shader.h  Texture.c  Texture.h  stb_image.c
Src/Utility/: Utility.c  Utility.h
